--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pybullet_suite"]
 	path = pybullet_suite
 	url = https://github.com/kh11kim/pybullet_suite.git
+[submodule "symk"]
+	path = symk
+	url = https://github.com/speckdavid/symk.git
